<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.mj.kmjhomework.view.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_stroke_black"
            android:hint="@string/search_info_str"
            android:padding="10dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/btnClear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:visibility="gone"
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorBlack"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="X"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/etSearch"
            app:layout_constraintEnd_toStartOf="@+id/btnSearch"
            app:layout_constraintStart_toEndOf="@+id/etSearch"
            app:layout_constraintTop_toTopOf="@+id/etSearch" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorBlack"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="@string/search_str"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/etSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toTopOf="@+id/etSearch" />

        <Button
            android:id="@+id/btnDetailSearch"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_stroke_nothing"
            android:gravity="start"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/detail_search_str"
            android:textColor="@color/colorGray"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/btnDetailClear"
            app:layout_constraintStart_toStartOf="@+id/etSearch"
            app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

        <Button
            android:id="@+id/btnDetailClear"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorBlack"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="X"
            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnDetailSearch"
            app:layout_constraintEnd_toEndOf="@+id/btnSearch"
            app:layout_constraintStart_toEndOf="@+id/btnDetailSearch"
            app:layout_constraintTop_toTopOf="@+id/btnDetailSearch" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tvCondition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            tools:text="@string/beer_abv_str"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            android:textStyle="bold"
            android:paddingStart="24dp"
            app:layout_constraintEnd_toEndOf="@+id/btnDetailSearch"
            app:layout_constraintStart_toStartOf="@+id/btnDetailSearch"
            app:layout_constraintTop_toBottomOf="@+id/btnDetailSearch"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBeerList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCondition"
            app:setBeers="@{vm.beers}"
            tools:listitem="@layout/item_beer_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>